# IntelligentUAVChampionshipBase

./: Dockerfile  LICENSE  README.md  run_gnssdecoder.sh  student_image.sh
.catkin_tools/profiles/default/: devel_collisions.txt
basic_dev/: CMakeLists.txt  Dockerfile  gnss_decoder_test.cpp  run_basic_dev.sh  setup.bash
basic_dev/devel/: .catkin  .rosinstall  _setup_util.py
basic_dev/devel/include/airsim_ros/: Altimeter.h  AngleRateThrottle.h  CarControls.h  CarState.h  Circle.h  CirclePoses.h  Environment.h  GPSYaw.h  GimbalAngleEulerCmd.h  GimbalAngleQuatCmd.h  Land.h  LandGroup.h  LandGroupRequest.h  LandGroupResponse.h  LandRequest.h  LandResponse.h  PoseCmd.h  Reset.h  ResetRequest.h  ResetResponse.h  RotorPWM.h  SetGPSPosition.h  SetGPSPositionRequest.h  SetGPSPositionResponse.h  SetLocalPosition.h  SetLocalPositionRequest.h  SetLocalPositionResponse.h  Takeoff.h  TakeoffGroup.h  TakeoffGroupRequest.h  TakeoffGroupResponse.h  TakeoffRequest.h  TakeoffResponse.h  TopicHz.h  TopicHzRequest.h  TopicHzResponse.h  TreePoses.h  VelCmd.h  VelCmdGroup.h
basic_dev/devel/lib/airsim_ros/: pd_position_controller_simple_node
basic_dev/devel/lib/basic_dev/: basic_dev
basic_dev/devel/lib/pkgconfig/: airsim_ros.pc  basic_dev.pc
basic_dev/devel/lib/python3/dist-packages/airsim_ros/msg/: _Altimeter.py  _AngleRateThrottle.py  _CarControls.py  _CarState.py  _Circle.py  _CirclePoses.py  _Environment.py  _GPSYaw.py  _GimbalAngleEulerCmd.py  _GimbalAngleQuatCmd.py  _PoseCmd.py  _RotorPWM.py  _TreePoses.py  _VelCmd.py  _VelCmdGroup.py  __init__.py
basic_dev/devel/lib/python3/dist-packages/airsim_ros/srv/: _Land.py  _LandGroup.py  _Reset.py  _SetGPSPosition.py  _SetLocalPosition.py  _Takeoff.py  _TakeoffGroup.py  _TopicHz.py  __init__.py
basic_dev/devel/share/airsim_ros/cmake/: airsim_ros-msg-paths.cmake  airsim_rosConfig.cmake
basic_dev/devel/share/basic_dev/cmake/: basic_devConfig.cmake
basic_dev/devel/share/common-lisp/ros/airsim_ros/msg/: Altimeter.lisp  AngleRateThrottle.lisp  CarControls.lisp  CarState.lisp  Circle.lisp  CirclePoses.lisp  Environment.lisp  GPSYaw.lisp  GimbalAngleEulerCmd.lisp  GimbalAngleQuatCmd.lisp  PoseCmd.lisp  RotorPWM.lisp  TreePoses.lisp  VelCmd.lisp  VelCmdGroup.lisp  _package.lisp  _package_Altimeter.lisp  _package_AngleRateThrottle.lisp  _package_CarControls.lisp  _package_CarState.lisp  _package_Circle.lisp  _package_CirclePoses.lisp  _package_Environment.lisp  _package_GPSYaw.lisp  _package_GimbalAngleEulerCmd.lisp  _package_GimbalAngleQuatCmd.lisp  _package_PoseCmd.lisp  _package_RotorPWM.lisp  _package_VelCmd.lisp  _package_VelCmdGroup.lisp  airsim_ros-msg.asd
basic_dev/devel/share/common-lisp/ros/airsim_ros/srv/: Land.lisp  LandGroup.lisp  Reset.lisp  SetGPSPosition.lisp  SetLocalPosition.lisp  Takeoff.lisp  TakeoffGroup.lisp  TopicHz.lisp  _package.lisp  _package_Land.lisp  _package_Reset.lisp  _package_SetGPSPosition.lisp  _package_SetLocalPosition.lisp  _package_TakeoffGroup.lisp  _package_TopicHz.lisp  airsim_ros-srv.asd
basic_dev/devel/share/gennodejs/ros/airsim_ros/msg/: Altimeter.js  AngleRateThrottle.js  CarControls.js  CarState.js  Circle.js  CirclePoses.js  Environment.js  GPSYaw.js  GimbalAngleEulerCmd.js  GimbalAngleQuatCmd.js  PoseCmd.js  RotorPWM.js  TreePoses.js  VelCmd.js  VelCmdGroup.js  _index.js
basic_dev/devel/share/gennodejs/ros/airsim_ros/srv/: Land.js  LandGroup.js  Reset.js  SetGPSPosition.js  SetLocalPosition.js  Takeoff.js  TakeoffGroup.js  TopicHz.js  _index.js
basic_dev/devel/share/roseus/ros/airsim_ros/: manifest.l
basic_dev/devel/share/roseus/ros/airsim_ros/msg/: Altimeter.l  AngleRateThrottle.l  CarControls.l  CarState.l  Circle.l  CirclePoses.l  Environment.l  GPSYaw.l  GimbalAngleEulerCmd.l  GimbalAngleQuatCmd.l  PoseCmd.l  RotorPWM.l  TreePoses.l  VelCmd.l  VelCmdGroup.l
basic_dev/devel/share/roseus/ros/airsim_ros/srv/: Land.l  LandGroup.l  Reset.l  SetGPSPosition.l  SetLocalPosition.l  Takeoff.l  TakeoffGroup.l  TopicHz.l
basic_dev/src/airsim_ros/: CMakeLists.txt
basic_dev/src/airsim_ros/include/: pd_position_controller_simple.h
basic_dev/src/airsim_ros/msg/: RotorPWM.msg  TreePoses.msg
basic_dev/src/airsim_ros/src/: pd_position_controller_simple.cpp
basic_dev/src/airsim_ros/srv/: TopicHz.srv
basic_dev/src/basic_dev/: CMakeLists.txt  package.xml
basic_dev/src/basic_dev/include/: basic_dev.hpp
basic_dev/src/basic_dev/src/: basic_dev.cpp
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/airsim_ros_pkgs/: .catkin  local_setup.sh  setup.sh
devel/.private/catkin_tools_prebuild/: .catkin
devel/.private/keyboard_control/: .catkin  local_setup.sh
devel/include/airsim_ros_pkgs/: Altimeter.h  CarControls.h  CarState.h  Environment.h  GPSYaw.h  GimbalAngleEulerCmd.h  GimbalAngleQuatCmd.h  Land.h  LandGroup.h  LandGroupRequest.h  LandGroupResponse.h  LandRequest.h  LandResponse.h  PoseCmd.h  Reset.h  ResetRequest.h  ResetResponse.h  SetGPSPosition.h  SetGPSPositionRequest.h  SetGPSPositionResponse.h  SetLocalPosition.h  SetLocalPositionRequest.h  SetLocalPositionResponse.h  Takeoff.h  TakeoffGroup.h  TakeoffRequest.h  (+5 more)
docs/: student_basic_dev_instruction.md
kb_ctrl/: Dockerfile  run_kbctrl.sh  setup.bash
kb_ctrl/src/kb_ctrl/: CMakeLists.txt  package.xml
kb_ctrl/src/kb_ctrl/include/: kb_ctrl.hpp
kb_ctrl/src/kb_ctrl/launch/: kb_ctrl.launch
kb_ctrl/src/kb_ctrl/src/: kb_ctrl.cpp
logs/keyboard_control/: build.cmake.000.log.stderr  build.make.000.log.stderr
pos_ctrl/: Dockerfile  run_posctrl.sh  setup.bash
pos_ctrl/src/pos_ctrl/: CMakeLists.txt  package.xml
pos_ctrl/src/pos_ctrl/include/: pos_ctrl.hpp
pos_ctrl/src/pos_ctrl/launch/: imu.launch  pos_ctrl.launch
pos_ctrl/src/pos_ctrl/src/: pos_ctrl.cpp
src/airsim_ros_pkgs/: CMakeLists.txt
src/airsim_ros_pkgs/include/: pd_position_controller_simple.h
src/airsim_ros_pkgs/src/: pd_position_controller_simple.cpp
src/basic/: CMakeLists.txt  package.xml
src/go/: CMakeLists.txt  package.xml
src/keyboard_control/: CMakeLists.txt
(+252 files in other folders)
